# OpenMP

./: .gitignore  CMakeLists.txt  README.md  mise.toml  sprawozdanie_section_bucket.tex  wykresy.py
results_bucket_sweep/: mult_128_t16_r1.csv  mult_128_t16_r2.csv  mult_128_t16_r3.csv  mult_128_t16_r4.csv  mult_128_t16_r5.csv  mult_128_t1_r1.csv  mult_128_t1_r2.csv  mult_128_t1_r3.csv  mult_128_t1_r4.csv  mult_128_t1_r5.csv  mult_128_t24_r1.csv  mult_128_t24_r2.csv  mult_128_t24_r3.csv  mult_128_t24_r4.csv  mult_128_t24_r5.csv  mult_128_t2_r1.csv  mult_128_t2_r2.csv  mult_128_t2_r3.csv  mult_128_t2_r4.csv  mult_128_t2_r5.csv  mult_128_t32_r1.csv  mult_128_t32_r2.csv  mult_128_t32_r3.csv  mult_128_t32_r4.csv  mult_128_t32_r5.csv  mult_128_t40_r1.csv  mult_128_t40_r2.csv  mult_128_t40_r3.csv  mult_128_t40_r4.csv  mult_128_t40_r5.csv  mult_128_t48_r1.csv  mult_128_t48_r2.csv  mult_128_t48_r3.csv  mult_128_t48_r4.csv  mult_128_t48_r5.csv  mult_128_t4_r1.csv  mult_128_t4_r2.csv  mult_128_t4_r3.csv  mult_128_t4_r4.csv  mult_128_t4_r5.csv  (+320 more)
results_strong_alg1/: run_16_1.csv  run_16_2.csv  run_16_3.csv  run_16_4.csv  run_16_5.csv  run_1_1.csv  run_1_2.csv  run_1_3.csv  run_1_4.csv  run_1_5.csv  run_24_1.csv  run_24_2.csv  run_24_3.csv  run_24_4.csv  run_24_5.csv  run_2_1.csv  run_2_2.csv  run_2_3.csv  run_2_4.csv  run_2_5.csv  run_32_1.csv  run_32_2.csv  run_32_3.csv  run_32_4.csv  run_32_5.csv  run_40_1.csv  run_40_2.csv  run_40_3.csv  run_40_4.csv  run_40_5.csv  run_48_1.csv  run_48_2.csv  run_48_3.csv  run_48_4.csv  run_48_5.csv  run_4_1.csv  run_4_2.csv  run_4_3.csv  run_4_4.csv  run_4_5.csv  (+5 more)
results_strong_alg2/: run_16_1.csv  run_16_2.csv  run_16_3.csv  run_16_4.csv  run_16_5.csv  run_1_1.csv  run_1_2.csv  run_1_3.csv  run_1_4.csv  run_1_5.csv  run_24_1.csv  run_24_2.csv  run_24_3.csv  run_24_4.csv  run_24_5.csv  run_2_1.csv  run_2_2.csv  run_2_3.csv  run_2_4.csv  run_2_5.csv  run_32_1.csv  run_32_2.csv  run_32_3.csv  run_32_4.csv  run_32_5.csv  run_40_1.csv  run_40_2.csv  run_40_3.csv  run_40_4.csv  run_40_5.csv  run_48_1.csv  run_48_2.csv  run_48_3.csv  (+12 more)
(+120 files in other folders)
